# Security-Findings-Recommender-System

./: .env.docker.example  .env.docker.template  .env.template  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.queue  Documentation.md  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run
.github/workflows/: docker.yml  docs.yml  license-compliance.yml  test.yml
api/: ollama.py
dashboard/: Dockerfile  angular.json  package-lock.json  package.json  tsconfig.json
dashboard/src/: Themes.ts  styles.scss
data/: Dataset.json  Findings.py  helper.py  readme.md  types.py
documentation/: 00 - introduction.md  00-introduction.md  01 - prerequisites.md  01-prerequisites.md  02 - installation.md  02-installation.md  03 - usage.md  04-testing.md  FAQ.md  architecture.md  data-schema.md  dependencies.md  examples.md  installation.md  introduction.md  prerequisites.md  usage.md
documentation/Guides/: LLM Service Integration.md  Understanding the AI Architecture.md  Understanding the Data Model.md
documentation/UML/: aggregation-layer.mermaid  data-layer.mermaid  llm-layer.mermaid  top-level.mermaid
documentation/technical guides/: Understanding the Data Model.md
notebooks/: basic_analysis.ipynb  getting_started.ipynb  how_to_data_schema.ipynb  openAI_tester.ipynb  summarised_findings.json
ollama/: Dockerfile
scripts/: nuke.sh
src/: .env.example  alembic.ini  app.py  config.py  db.py  extract-docs.py  generate-routes.py  my_db.py
src/ai/: LLMService.py  (+1 more)
utils/: print_utils.py
(+140 files in other folders)
