[tool.poetry]
name = "src"
version = "0.1.0"
description = "SFRS"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
sqlmodel = ">=0.0.18,<0.1.0"
alembic = ">=1.13.1,<1.14.0"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
fastapi = "0.109.1"
uvicorn = "0.15.0"
python-dotenv = "^1.0.1"
jsonschema = "4.22.0"
sqlalchemy = ">=2.0.30,<2.1.0"
tqdm = ">=4.66.4,<4.67.0"
httpx = ">=0.27.0,<0.28.0"
tenacity = ">=8.3.0,<8.4.0"
celery = {version = "5.2.2", extras = ["redis"]}
openai = ">=1.33.0,<1.34.0"
anthropic = ">=0.28.0,<0.29.0"
pydantic-settings = ">=2.3.2,<2.4.0"
pandas = "^2.2.2"
sentence-transformers = "^3.0.1"
kneed = "^0.8.5"
scikit-learn = "^1.5.1"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
